[gd_scene load_steps=8 format=2]

[ext_resource path="res://combat/weapons/projectiles/Projectile.gd" type="Script" id=1]
[ext_resource path="res://actor_states/motion/Motion.tscn" type="PackedScene" id=2]
[ext_resource path="res://combat/weapons/damage_source/DamageSource.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor_framework/Target.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 59.5189

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
length = 0.001

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Motion" parent="." instance=ExtResource( 2 )]
look_towards_move_direction = false

[node name="MotionSteering" parent="Motion" index="1"]
max_speed = 1337.0

[node name="Gravity" parent="Motion" index="2"]
gravity = 0.0
max_speed = 0.0

[node name="DamageSource" parent="." instance=ExtResource( 3 )]
collision_mask = 2

[node name="CollisionBox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="Target" type="Position2D" parent="."]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SETUP = SubResource( 2 )
anims/destroy = SubResource( 3 )

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="StartupDelay" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
autostart = true
[connection signal="hit_confirmed" from="DamageSource" to="." method="_on_hit_confirmed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="timeout" from="LifetimeTimer" to="." method="queue_free"]
[connection signal="timeout" from="StartupDelay" to="." method="_on_StartupDelay_timeout"]

[editable path="Motion"]
